# Embedded_Devops

./: .gitignore  README.md  build_all.sh  deploy_all.sh  deploy_local.sh  variants.yaml
.github/workflows/: ci.yml
apps/canbus_app/: BUILD.bazel  CMakeLists.txt  CMakePresets.json  MODULE.bazel  main.cpp
apps/gcc_app/: BUILD.bazel  CMakeLists.txt  MODULE.bazel  gcc_app  main.cpp
apps/gpio_app/: BUILD.bazel  CMakeLists.txt  MODULE.bazel  main.cpp
apps/sensor_app/: BUILD.bazel  CMakeLists.txt  MODULE.bazel  main.cpp
apps/watchdog_app/: BUILD.bazel  CMakeLists.txt  MODULE.bazel  main.cpp
cmake/: toolchain-aarch64-linux-gnu.cmake  toolchain-arm-linux-gnueabihf.cmake  toolchain-riscv64-linux-gnu.cmake
docker/: Dockerfile.builder  Dockerfile.canbus_app  Dockerfile.freertos  Dockerfile.gcc  Dockerfile.gcc_app  Dockerfile.gpio_app  Dockerfile.mbed  Dockerfile.sensor_app  Dockerfile.watchdog_app  Dockerfile.zephyr
embedded-os-k8s-orchestrator/: QUICKSTART.md  SETUP_COMPLETE.md  build_all.sh
embedded-os-k8s-orchestrator/.github/workflows/: ci.yml
embedded-os-k8s-orchestrator/apps/freertos_app/: BUILD.bazel  CMakeLists.txt  main.c
embedded-os-k8s-orchestrator/apps/mbed_app/: main.cpp
embedded-os-k8s-orchestrator/apps/zephyr_app/: BUILD.bazel  CMakeLists.txt  Makefile  main.c
embedded-os-k8s-orchestrator/docker/: Dockerfile.freertos  Dockerfile.mbed  Dockerfile.zephyr
embedded-os-k8s-orchestrator/k8s/: README.md  freertos-deployment.yaml  mbed-deployment.yaml  namespace.yaml  services.yaml  zephyr-deployment.yaml
k8s/: freertos-deployment.yaml  manifest.yaml  mbed-deployment.yaml  namespace.yaml  services.yaml  zephyr-deployment.yaml
scripts/: generate_k8s.py  generate_matrix.py
